# CPP-Machine-Learning-Library

./: CMakeLists.txt  CmakeCommands-Desktop.bat  CmakeCommands.bat  PytorchToCSV.py  TestingFile.cpp
Components/: ActivationFunctions.cpp  Architecture.cpp  Basic.cpp  Layers.cpp  Loss.cpp  Optimizer.cpp
Headers/: ActivationFunctions.hpp  Architecture.hpp  Basic.hpp  Layers.hpp  Loss.hpp  Optimizer.hpp
build-desktop/: CMakeCache.txt  Makefile  Net.csv  cmake_install.cmake
